# paddlePulverizer

./: .gitignore  Document.py  README.md  arrangement.py  block.py  cut_merge_k2.py  gitignore  imagePage.py  pdfDocument.py  pdfPage.py  pulverizer.py  requirements-telegram.txt  requirements.txt  telegram_bot_wrap.py  test.py
paddlePulverizer/: README.md  pyproject.toml
paddlePulverizer/src/paddlepulverizer/: Document.py  __init__.py  cut_merge_k2.py  pdfPage.py  telegram_bot_wrap.py
src/: arrangement.py  imagePage.py  pic2pdf.py  pulverizer.py  requirements-telegram.txt  requirements.txt  tgBot.py
