[project]
name = "paddlepulverizer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dokosho02", email = "dokosho02@gmail.com" }
]
dependencies = [
    "layoutparser>=0.3.4",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.8.1",
    "pypdf4>=1.27.0",
    "loguru>=0.7.2",
    "pdf-annotate>=0.12.0",
    "pytesseract>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paddlepulverizer"]


